--- a/regit.html
+++ b/regit.html
@@ -11,37 +11,45 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		
-		<script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.11.1/validate.min.js"></script>
+		<script src="./lib/validate.min.js"></script>
+		<script src="./lib/rainbow.js"></script>
 		<style>
+		@font-face {
+			font-family: Gravity;
+			src: url(./lib/Gravity-Regular.otf);
+		}		
 		.form {
 			margin-top: 15px;
+			margin-bottom: 30px;
 		}
 		.banner {
 			box-shadow: inset 0 0 10px #000000; 
 			background-color: #F5FFFA;
 			padding-top: 15px;
 			padding-bottom: 30px;
-		}		
+		}	
+		body {
+			font-family: Gravity;
+		}
 		</style>
 	</head>
 	
 	<body>
 	<div class="banner">
 		<div class="container">
-			<h1>Registration</h1>
+			<h1 class="rainbow">Registration</h1>
 			<div><span style="color:red;">*</span> required</div>
 		</div>
 	</div>
 	<div class="form container">
-	<form method="post">  
+	<form action="/data.php" method="post">  
 		<table class="table table-striped table-bordered">
 			<thead>
 				<tr><th>Personal Information</th></tr>
 			</thead>
 			<tbody>
 				<tr><td>Salutation <span style="color:red;">*</span></td>
-				<td><select name="salutation">
-					<option value=""></option>
+				<td><select name="salutation" id="salutation">
 					<option value="Mr.">Mr.</option>
 					<option value="Miss.">Miss.</option>
 					<option value="Mrs.">Mrs.</option>
@@ -55,13 +63,26 @@
 				<tr><th>Account Information</th></tr>
 			</thead>
 			<tbody>
-				<tr><td>Email address <span style="color:red;">*</span> </td><td><input type="text" id="email" name="email"></input></td></tr>
-				<tr><td>Retype email address <span style="color:red;">*</span> </td><td><input type="text" id="emailr"></input></td></tr>
+				<tr>
+					<td>Email address <span style="color:red;">*</span></td>
+					<td>
+						<input type="text" id="email" name="email"></input>
+						<div id="email_err"></div>
+					</td>
+				</tr>
+				<tr>
+					<td>Retype email address <span style="color:red;">*</span></td>
+					<td>
+						<input type="text" id="emailr"></input><div id="email_err"></div>
+						<div id="emailr_err"></div></td>
+					</td>
+				</tr>
 				<tr>
 					<td>Password <span style="color:red;">*</span></td>
 					<td>
 						<div><input type="password" id="password" name="password"></input></div>
 						<div>
+							<div id="pw_err"></div>
 							<div id="pw1">Rule 1: Must contain at least 8 characters</div>
 							<div id="pw2">Rule 2: Must contain <b>BOTH</b> upper and lower-case characters</div>
 							<div id="pw3">Rule 3: Must contain only letters, numbers and underscores</div>						
@@ -84,15 +105,15 @@
 				<tr>
 					<td>Address <span style="color:red;">*</span> </td>
 					<td>
-						<div><input type="text" id="password" name="password"></input></div>
-						<div style="margin-top:2px;margin-bottom:2px;"><input type="text" id="password" name="password"></input></div>
-						<div><input type="text" id="password" name="password"></input></div>
+						<div><input type="text" id="add1" name="add1"></input></div>
+						<div style="margin-top:2px;margin-bottom:2px;"><input type="text" id="add2" name="add2"></input></div>
+						<div><input type="text" id="add3" name="add3"></input></div>
 					</td>
 					</tr>
 			</tbody>				
 		</table>
+	<button type="button" onclick="sub(this)" class="btn btn-sm btn-default">Submit</button>
 	</form>	
-	<button type="button" class="btn btn-sm btn-default">Submit</button>
 	</div>	
 	<script>
 	$(function(){
@@ -101,19 +122,21 @@
 		$("tr td:first-child").css({"width":"170px","text-align":"right","vertical-align":"middle"});
 	});
 	
-	$("#password").blur(function(){vpw($("#password").val())});
-	$("#passwordr").blur(function(){
-		if($("#passwordr").val()!=""){
-			if($("#passwordr").val()==$("#password").val()){
-				$("#pw4").html("<span style='color:green'>Match<span>");
-				return true;	
-			} else 
-				$("#pw4").html("<span style='color:red'>Does Not Match<span>");
-		}
+	$("#password").blur(function(){
+		validPW();
+		checkPW();
+	});
+	$("#passwordr").blur(checkPW);
+	$("#email").blur(validEM);
+	$("#emailr").blur(function(){
+		validEM();
+		checkEM();
 	});
 	
-	function vpw(input) {
+	function validPW() {
+		var input = $("#password").val();
 		if(input!=""){
+			$("#pw_err").html("");
 			re=/.{8,}/;
 			if(re.test(input)){
 				re= /[a-z]/;
@@ -124,24 +147,111 @@
 						$("#pw1").css("color","green");
 						$("#pw2").css("color","green");
 						$("#pw3").css("color","green");
+						return true;
 						}
 					else{
 						$("#pw1").css("color","green");
 						$("#pw2").css("color","green");
 						$("#pw3").css("color","red");	
-						return true;
+						return false;
 					}
-				} else{
+				} else {
 					$("#pw1").css("color","green");
 					$("#pw2").css("color","red");
+					$("#pw3").css("color","black");	
+					return false;					
 				}
-			} else
-				$("#pw1").css("color","red");
-		} else 
-			alert("Password cannot be empty!");
+			} else {
+				$("#pw1").css("color","green");
+				$("#pw2").css("color","red");
+				$("#pw3").css("color","black");	
+				return false;
+			}
+		} else { 
+			$("#pw_err").html("<span style='color:red'>Password cannot be empty!<span>");
+			return false;
+		}
 	}
 		
-		
+	function checkPW(){
+		if($("#passwordr").val()!=""){
+			if($("#passwordr").val()==$("#password").val()){
+				$("#pw4").html("<span style='color:green'>Password Matches<span>");
+				return true;	
+			} else {
+				$("#pw4").html("<span style='color:red'>Password Not Matching<span>");
+				return false;
+			}
+		}
+		return false;
+	}	
+	
+	function validEM() {
+		re = /(.+)@(.+){2,}\.(.+){2,}/;
+		if (re.test($("#email").val())==true){
+			$("#email_err").html("<span style='color:green'>Valid Email<span>");
+			return true;
+		} else {
+			$("#email_err").html("<span style='color:red'>Invalid Email<span>");	
+			return false;
+		}
+	}
+
+	function checkEM() {
+		if($("#email").val()!=""){
+			if($("#emailr").val() == $("#email").val()){
+				$("#emailr_err").html("<span style='color:green'>Email matches<span>");
+				return true;
+			} else {
+				$("#emailr_err").html("<span style='color:red'>Email Not Matching<span>");
+				return false;
+		}}
+		return false;
+	}
+	
+	function name(x){
+		re= /\W/;
+		if (x.val()!= ""){
+			return true;
+		} else 
+			return false;
+	}
+	
+	function sub(form){
+		var validate = [
+			name($("#name")),
+			name($("#surname")),
+			$("#tittle").val() != "" ,
+			$("#add1").val() + $("#add2").val() + $("#add3").val() != "",
+			validPW(),checkPW(),validEM(),checkEM()
+		];
+		var result = true;
+		var x;
+		for (x in validate)
+			result = result&&validate[x];
+		if(result==true)
+			$("form").submit();
+		else
+			alert("Input(s) not valid");
+	}
+	
+	$('h1.rainbow').each(function(){ //rainnnnnnnnnnnnnnbow
+			$(this).rainbow({	
+			colors: [
+				'#FF0000',
+				'#f26522',
+				'#fff200',
+				'#00a651',
+				'#28abe2',
+				'#2e3192',
+				'#6868ff',
+				'#000000'
+			],
+			animate: true,
+			animateInterval: 100,
+			pad: true,
+			pauseLength: 100,
+		});});	
 	</script>
 </body>
 </html>	
