--- a/regit.html
+++ b/regit.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Password Validation</title>
+		<title>Registration</title>
 		<meta charset="UTF-8">
-		<meta name="description" content="Password Validation">
+		<meta name="description" content="Registration">
 		<meta name="author" content="Johnson">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -42,6 +42,7 @@
 		</div>
 	</div>
 	<div class="form container">
+	<div style="margin-bottom: 10px;">Already got a account? <a class="rainbow" href="index.php">Login here!</a></div>
 	<form action="/data.php" method="post">  
 		<table class="table table-striped table-bordered">
 			<thead>
@@ -234,9 +235,9 @@
 		else
 			alert("Input(s) not valid");
 	}
-	
-	$('h1.rainbow').each(function(){ //rainnnnnnnnnnnnnnbow
-			$(this).rainbow({	
+		
+	function rain(x){ //rainnnnnnnnnnnnnnbow
+			x.rainbow({	
 			colors: [
 				'#FF0000',
 				'#f26522',
@@ -251,7 +252,9 @@
 			animateInterval: 100,
 			pad: true,
 			pauseLength: 100,
-		});});	
+		});};
+	rain($('h1.rainbow'));
+	rain($('a.rainbow'));	
 	</script>
 </body>
 </html>	
