--- a/regit.html
+++ b/regit.html
@@ -42,7 +42,7 @@
 	</div>
 	<div class="form container">
 	<div style="margin-bottom: 10px;">Already got a account? <a class="rainbow" href="index.php">Login here!</a></div>
-	<form action="/data.php" method="post">  
+	<form action="data.php" method="post">  
 		<table class="table table-striped table-bordered">
 			<thead>
 				<tr><th>Personal Information</th></tr>
