--- a/regit.html
+++ b/regit.html
@@ -101,7 +101,7 @@
 				<tr><th>Contact Information</th></tr>
 			</thead>
 			<tbody>
-				<tr><td>Phone number </td><td><input type="text" id="password" name="password"></input></td></tr>
+				<tr><td>Phone number </td><td><input type="text" id="phone" name="phone"></input></td></tr>
 				<tr>
 					<td>Address <span style="color:red;">*</span> </td>
 					<td>
